fix vertical align for svg

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,6 @@
 	background-color: #f4f4f4;
 	min-height: 100vh;
 }
+.ant-message svg {
+	vertical-align: baseline;
+}
