--- a/src/student/myBooking/styles/bookingCard.scss
+++ b/src/student/myBooking/styles/bookingCard.scss
@@ -2,11 +2,10 @@
 	position: relative;
 	border: 1px solid rgba(0, 0, 0, 0.1);
 	box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
-	border-radius: 0px;
 	padding: 8px;
-    margin: 2px;
+	margin: 2px;
 
-    @media only screen and (min-width: 320px) and (max-width: 767px) {
+	@media only screen and (min-width: 320px) and (max-width: 767px) {
 		padding: 4px;
 	}
 	&:hover {
@@ -19,35 +18,23 @@
 	}
 	&__text {
 		color: black;
-        margin-bottom: 0;
-        overflow: hidden;
+		margin-bottom: 0;
+		overflow: hidden;
 
-        @media only screen and (min-width: 320px) and (max-width: 767px) {
+		@media only screen and (min-width: 320px) and (max-width: 767px) {
 			margin-bottom: 0;
 		}
 	}
-	&__img {
-		position: absolute;
-		right: -3px;
-		top: 1px;
-        width: 80px;
-        display: none;
-
-		@media only screen and (min-width: 320px) and (max-width: 768px) {
-			display: none;
+	&--active {
+		background-color: rgba(0, 153, 0, 0.08);
+		&::after {
+			position: absolute;
+			content: '';
+			background-color: #090;
+			width: 4px;
+			height: 82px;
+			right: 0;
+			top: 0;
 		}
-    }
-    &--active {
-        background-color: rgba(0, 153, 0, 0.08);
-        &:after {
-            position: absolute;
-            content: '';
-            background-color: #090;
-            width: 4px;
-            height: 82px;
-            right: 0;
-            top: 0;
-
-        }
-    }
+	}
 }
