--- a/src/student/onlineBooking/onlineBooking.scss
+++ b/src/student/onlineBooking/onlineBooking.scss
@@ -10,38 +10,17 @@
 	@media only screen and (min-width: 320px) and (max-width: 768px) {
 		padding: 30px 20px;
 	}
-
 	&__title {
 		margin: 6px auto 20px;
 		text-align: center;
 	}
-
-	svg {
-		vertical-align: baseline !important;
-	}
-
 	.ant-btn {
 		margin: 16px 30px 0 0;
 	}
-}
-
-.l-download {
-	display: flex;
-	justify-content: space-between;
-	margin: 8px 0;
-
 	svg {
 		vertical-align: baseline;
 	}
-
-	p {
-		margin-bottom: 0;
-	}
-
-
-
 }
-
 #onlineBookingForm {
 	margin: 0 auto;
 	width: 100%;
@@ -52,11 +31,9 @@
 		}
 	}
 }
-
 div.jodit_workplace > div.jodit_wysiwyg {
 	min-height: 200px !important;
 }
-
 div.jodit_statusbar {
 	display: none;
 }
